--- a/frontend/admin/admin-contacts.html
+++ b/frontend/admin/admin-contacts.html
@@ -152,7 +152,7 @@
   </div>
 
   <!-- JS -->
-  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="../assets/js/custom.js"></script>
   <script src="../assets/js/admin-auth.js"></script>
